Added an object oriented approach.

--- a/Cryptocurrency_Lottery.ipynb
+++ b/Cryptocurrency_Lottery.ipynb
@@ -38,10 +38,9 @@
         "To play:\n",
         "\n",
         "1.   Sign in with your Google account (required to run cells).\n",
-        "2.   From the toolbar above click 'Runtime' > 'Run all' and then 'Run Anyway'.\n",
-        "3.   Expand the 'Play the Ethereum Lottery' section below.\n",
-        "4.   Enjoy!\n",
-        "\n"
+        "2.   Click 'Runtime' > 'Run all' and then 'Run Anyway'.\n",
+        "3.   Play by calling the play() function or by instantiating a Play() object.\n",
+        "4.   Enjoy!\n"
       ]
     },
     {
@@ -72,7 +71,7 @@
         "import ast\n",
         "import codecs\n",
         "import ecdsa\n",
-        "import hashlib\n",
+        "from hashlib import sha256\n",
         "from Crypto.Hash import keccak\n",
         "import requests"
       ],
@@ -86,7 +85,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Ethereum Lottery"
+        "### Functional Approach"
       ]
     },
     {
@@ -103,7 +102,7 @@
         "    Applies the SHA256 hash function to the input string which creates a cryptocurrency private key.\n",
         "    '''\n",
         "    \n",
-        "    private_key = hashlib.sha256(msg.encode()).hexdigest()\n",
+        "    private_key = sha256(msg.encode()).hexdigest()\n",
         "    return private_key\n",
         "\n",
         "def public_key_from_private_key(private_key):\n",
@@ -145,7 +144,7 @@
         "            response = response.text\n",
         "            response = ast.literal_eval(response)\n",
         "            balance = int(response['result'])\n",
-        "            return balance\n",
+        "            return balance * 10**(-18)\n",
         "        else:\n",
         "            print('An error has occurred.')\n",
         "    except:\n",
@@ -192,24 +191,139 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IvjPdi6RMCkS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "play()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "q8dguAqGWevK",
+        "id": "URrOmPtKYFgw",
         "colab_type": "text"
       },
       "source": [
-        "### Play the Ethereum Lottery"
+        "### Object Oriented Approach"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "edxqcjofYKzT",
         "colab_type": "code",
-        "id": "qjSP5xXAV0O8",
         "colab": {}
       },
       "source": [
-        "play()"
+        "class Play():\n",
+        "\n",
+        "    def __init__(self, text=''):\n",
+        "        self.text = str(text)\n",
+        "        self.private_key = self.text_to_priv_key()\n",
+        "        self.public_key = self.priv_key_to_pub_key()\n",
+        "        self.wallet_address = self.pub_key_to_wall_add()\n",
+        "        self.api_key = '7Z99TEIBCGR4H7ACKNBU41IUY9QJGTCA82'\n",
+        "        self.url = 'https://api.etherscan.io/api?module=account&action=balance&address=' + \\\n",
+        "        (self.wallet_address) + '&tag=latest&apikey=' + self.api_key\n",
+        "        self.balance = self.get_balance()\n",
+        "\n",
+        "        if self.balance == 0:\n",
+        "            print('Sorry, you lost. Try again!')\n",
+        "        elif self.balance != 0:\n",
+        "            print('Congratulations, you won! ' + \\\n",
+        "                  str(self.balance) + ' ETH is up for grabs!' + \\\n",
+        "                  '\\nCopy the private key: ' + str(self.private_key) )\n",
+        "\n",
+        "    def text_to_priv_key(self):\n",
+        "        '''\n",
+        "        Converts the input text to a private key using SHA256.\n",
+        "        '''\n",
+        "        private_key = sha256(self.text.encode()).hexdigest()\n",
+        "        return private_key\n",
+        "\n",
+        "    def priv_key_to_pub_key(self):\n",
+        "        '''\n",
+        "        Converts the private key to a public key.\n",
+        "        '''\n",
+        "        private_key_bytes = codecs.decode(self.private_key, 'hex')\n",
+        "        key = ecdsa.SigningKey.from_string(private_key_bytes, curve=ecdsa.SECP256k1).verifying_key\n",
+        "        key_bytes = key.to_string()\n",
+        "        public_key = codecs.encode(key_bytes, 'hex')\n",
+        "        return public_key\n",
+        "\n",
+        "    def pub_key_to_wall_add(self):\n",
+        "        '''\n",
+        "        Converts the public key to a wallet address.\n",
+        "        '''\n",
+        "        public_key_bytes = codecs.decode(self.public_key, 'hex')\n",
+        "        keccak_hash = keccak.new(digest_bits=256)\n",
+        "        keccak_hash.update(public_key_bytes)\n",
+        "        keccak_digest = keccak_hash.hexdigest()\n",
+        "        # Take the last 20 bytes\n",
+        "        wallet_len = 40\n",
+        "        wallet_address = '0x' + keccak_digest[-wallet_len:]\n",
+        "        return wallet_address\n",
+        "\n",
+        "    def get_balance(self): \n",
+        "        '''\n",
+        "        Checks to see if the Ethereum wallet has a nonzero balance using the EtherScan API.\n",
+        "        '''       \n",
+        "        try:\n",
+        "            response = requests.get(self.url)\n",
+        "            status = response.status_code\n",
+        "            if response.status_code == 200:\n",
+        "                response = response.text\n",
+        "                response = ast.literal_eval(response)\n",
+        "                balance = int(response['result'])\n",
+        "                return balance * 10**(-18)\n",
+        "            else:\n",
+        "                print('An error has occurred.')\n",
+        "        except:\n",
+        "            print('An error has occurred.')\n",
+        "\n",
+        "    def info(self):\n",
+        "        '''\n",
+        "        Prints important wallet information, such as the private key, which is needed to 'claim' the prize.\n",
+        "        '''\n",
+        "        print('\\nWallet Information' + \\\n",
+        "              '\\nBalance: ' + str(self.balance) + \\\n",
+        "              '\\nWallet Address: ' + str(self.wallet_address) + \\\n",
+        "              '\\nPrivate Key: ' + str(self.private_key))\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RyarAODaZlZY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test = Play()\n",
+        "# At the time of writing the default empty string points to a nonzero wallet address!"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5rLtJDfqnkeZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test.info()"
       ],
       "execution_count": 0,
       "outputs": []
