Updated API Key info

--- a/Cryptocurrency_Lottery.ipynb
+++ b/Cryptocurrency_Lottery.ipynb
@@ -23,7 +23,7 @@
       "source": [
         "# Cryptocurrency Lottery\n",
         "\n",
-        "by Jagraj Singh"
+        "Jagraj Singh"
       ]
     },
     {
@@ -37,6 +37,7 @@
         "\n",
         "To play:\n",
         "\n",
+        "0.   Create an EtherScan.io API key [here](https://etherscan.io/apis) and assign it to ```api_key``` in the cell below and in the Play class ```__init__``` constructor.\n",
         "1.   Sign in with your Google account (required to run cells).\n",
         "2.   Click 'Runtime' > 'Run all' and then 'Run Anyway'.\n",
         "3.   Play by calling the play() function or by instantiating a Play() object.\n",
@@ -73,7 +74,9 @@
         "import ecdsa\n",
         "from hashlib import sha256\n",
         "from Crypto.Hash import keccak\n",
-        "import requests"
+        "import requests\n",
+        "\n",
+        "api_key = None"
       ],
       "execution_count": 0,
       "outputs": []
@@ -168,7 +171,6 @@
         "        private_key = private_key_from_string(msg)\n",
         "        public_key = public_key_from_private_key(private_key)\n",
         "        address = address_from_public_key(public_key)\n",
-        "        api_key = '7Z99TEIBCGR4H7ACKNBU41IUY9QJGTCA82'\n",
         "        url = 'https://api.etherscan.io/api?module=account&action=balance&address=' + address + '&tag=latest&apikey=' + api_key\n",
         "        balance = get_balance(url)\n",
         "        \n",
@@ -189,6 +191,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i7p1Av7JRotl",
+        "colab_type": "text"
+      },
+      "source": [
+        "Play the Ethereum Lottery:"
+      ]
     },
     {
       "cell_type": "code",
@@ -228,7 +240,7 @@
         "        self.private_key = self.text_to_priv_key()\n",
         "        self.public_key = self.priv_key_to_pub_key()\n",
         "        self.wallet_address = self.pub_key_to_wall_add()\n",
-        "        self.api_key = '7Z99TEIBCGR4H7ACKNBU41IUY9QJGTCA82'\n",
+        "        self.api_key = None # Replace 'None' with your API key.\n",
         "        self.url = 'https://api.etherscan.io/api?module=account&action=balance&address=' + \\\n",
         "        (self.wallet_address) + '&tag=latest&apikey=' + self.api_key\n",
         "        self.balance = self.get_balance()\n",
@@ -300,6 +312,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VkTIm9eZRy2z",
+        "colab_type": "text"
+      },
+      "source": [
+        "Play the Ethereum Lotter (OOP Edition):"
+      ]
     },
     {
       "cell_type": "code",
